...
<string name="add_more">Add more</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="advance">forward to\nnext\nprompt</string>
<string name="altitude">Altitude</string>
<string name="title_confirm_cancel">Confirm cancel</string>
<string name="title_discard_observations">Discard these observations?</string>
<string name="are_you_sure">This will discard all changes. Are you sure?</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="backup">backward to\nprevious\nprompt</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="cancel">Cancel</string>
...
<string name="trigger">OK. Please continue.</string>
<string name="uploading_data">Sending Form</string>
<string name="url_error">Sorry, invalid URL!</string>
<string name="username">Username</string>
<string name="view_hierarchy">Go To Prompt</string>
<string name="yes_discard_all">Yes, discard all</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="general_preferences">General Settings</string>
<string name="click_to_web">Tap to visit http://opendatakit.org</string>
<string name="client">User Interface</string>
<string name="show_splash">Show splash screen</string>
<string name="show_splash_summary">Shows when application starts</string>
<string name="splash_path">Selected splash image</string>
...
<string name="change_server_url">Server URL</string>
<string name="gme_search_browse">Search for forms. Or select \'My Drive\' below to browse.</string>
<string name="no_blank_search">Search field cannot be blank.</string>
<string name="select_maps_account">You have selected Google Maps Engine as your server, please select a corresponding Google Account in the General Settings before continuing</string>
<string name="get_project_IDs">Getting Project IDs</string>
<string name="title_loading_form">Loading Form</string>
<string name="form_entry_save">Save</string>
<string name="form_entry_discard">Discard</string>
</resources>
