...
  <string name="authorization_failed">Authorization failed.</string>
  <string name="server_connection_failed">Could not connect to server.  Please check the server and OpenMRS account settings.</string>
  <string name="title_authorizing">Authorizing</string>

  <!-- Statuses -->
  <string name="status_unknown">Unknown</string>
  <string name="status_well">Well</string>
  <string name="status_unwell">Unwell</string>
  <string name="status_critical">Critical</string>
  <string name="status_palliative">Palliative</string>
  <string name="status_convalescent">Convalescing</string>
  <string name="status_discharged_non_case">Discharged Non-Case</string>
  <string name="status_discharged_cured">Discharged Cured</string>
...
  <string name="username_cannot_be_null">Username must not be null</string>
  <string name="given_name_cannot_be_null">Given name must not be null</string>
  <string name="family_name_cannot_be_null">Family name must not be null</string>
  <string name="invalid_username">Username must be between 2 and 50 characters. Only letters, digits, ".", "-", and "_" are allowed.</string>
  <string name="ebola_test_label">Ebola test</string>
  <string name="latest_pcr_label_with_date">Ebola test (%s)</string>
  <string name="action_add_test_result">Add test result</string>
  <string name="pregnant_suffix">p</string>
  <string name="pregnant">Pregnant</string>
  <string name="iv_fitted">IV fitted</string>
  <string name="cannot_eat">Cannot eat</string>
  <string name="oxygen">Oxygen</string>
  <string name="status_short_desc_unknown">-</string>
  <string name="status_short_desc_well">1</string>
  <string name="status_short_desc_unwell">2</string>
  <string name="status_short_desc_critical">3</string>
  <string name="status_short_desc_palliative">4</string>
  <string name="status_short_desc_convalescent">5</string>
  <string name="status_short_desc_discharged_non_case">8</string>
  <string name="status_short_desc_discharged_cured">7</string>
...
