...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vital_unknown">

    <RelativeLayout
        android:id="@+id/patient_chart_vital_general_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/patient_chart_vital_general_condition"
...
            android:layout_above="@+id/patient_chart_vital_general_condition"
            android:padding="8dp"
            android:gravity="center"
            android:textColor="@color/vital_fg_unknown"
            android:textSize="56sp"
            android:maxLines="2"
            android:id="@+id/patient_chart_vital_general_condition_number"
            android:text="–"/>

    </RelativeLayout>

</FrameLayout>

